2004-06-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: If BuildDependsOnly is not true, allow the directory
	/sw/include/ or any subdirectory of it, but do not allow *files*
	within that directory.

2004-06-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Don't warn when the xfree86 package installs files
	outside /sw, as long as it installs them in the right place.
	Also, fixed the regex which lets (x)emacs install .elc files without
	the warning.

2004-06-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Recognize darwin 7.4.0.

2004-06-03  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: When extracting tarballs, the optional flags
	which cause permissions and ownership not to be preserved
	should not be invoked during bootstrap (because the Apple-supplied 
	gnutar is too old to know about these flags, in 10.2 and earlier).

2004-06-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Validation,pm: Write the contents of the
	BuildDependsOnly field into the .deb file, and when validating a 
	.deb, verify that BuildDependsOnly is true whenever things are
	installed into /sw/include.

2004-05-26  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: dumpinfo: don't print fields that don't apply to
	splitoffs for splitoff pkgs.
	* PkgVersion.pm: get_source: no default Source for splitoff
	pkgs. get_source_suffices: no sources for splitoff pkgs.

2004-05-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVerison.pm: get_source_suffices: Ignore SourceN for Type "bundle", "nosource", "dummy".

2004-05-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VirtPackage.pm:  adjust the Provides in the system-perl packages

2004-05-13  Daniel Macks  <dmacks@netspace.org>

	* Command.pm: Fixed rm_f to not return failure for non-existent	files.
	Made _expand omit globs that match nothing, undefs, and blanks.

2004-05-13  Peter O'Gorman  <ogorman@users.sourceforge.net>
