@@ -1,3 +1,7 @@
+2004-06-17  Dainel Macks  <dmacks@netspace.org>
+
+	* Engine.pm: Made 'dumpinfo -fdaemonicfile' use multiline format.
+
 2004-06-16  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* Validation.pm: If BuildDependsOnly is not true, allow the directory
